--- a/public/home.html
+++ b/public/home.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+  <link href="output.css" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon-16x16.png" type="image/x-icon">
+  <title>U.C HUB WAITLIST</title>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline">
+<body class="font-body">
+  <h1 class="text-3xl font-bold underline ">
     Hello world!
   </h1>
 </body>
