--- a/public/home.html
+++ b/public/home.html
@@ -9,7 +9,7 @@
 </head>
 <body class="font-body">
   <h1 class="text-3xl font-bold underline ">
-    Hello U.C HUB
+    Hello U.C HUB!!!
   </h1>
 </body>
 </html>
