--- a/public/home.html
+++ b/public/home.html
@@ -4,12 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="output.css" rel="stylesheet">
-  <link rel="shortcut icon" href="images/favicon-16x16.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Assets/favicon-16x16.png" type="image/x-icon">
   <title>U.C HUB WAITLIST</title>
 </head>
-<body class="font-body">
-  <h1 class="text-3xl font-bold underline ">
-    Hello U.C HUB!!!
-  </h1>
+<body class=" bg-black-bodyBgColor">
+  <!-- HEADER -->
+  <header class="flex items-center justify-between px-12 py-6">
+    <div>
+      <img class="cursor-pointer" src="./Assets//uc hub logo.svg" alt="U.C HUB LOGO">
+    </div>
+    <div>
+      <button class="btn">
+        <a href="">Join the Waitlist</a>
+      </button>
+    </div>
+  </header>
+  <!-- HEADER END -->
+  <!-- HERO SECTION -->
+  <main class="flex justify-between mt-[7em] px-12">
+    <div class="w-[50%] hero-left pt-5">
+      <h1 class="flex flex-col gap-3 text-6xl font-bold">
+        <span class="text-primary-500">No more failure</span>
+        <span class="text-primary-600">with U.C Hub</span>
+      </h1>
+      <div class="flex flex-col gap-3 mt-8">
+        <p class="heroPtag">In the University, tutoring, guidance, mentoring, tips and tricks, are best given from experience.</p>
+        <p class="heroPtag">Connect with a verified expert colleague who will provide easy and convenient coaching to get you the results you want.</p>
+      </div>
+      <div class="mt-12">
+        <button class="btn">
+          <a href="">Join the Waitlist</a>
+        </button>
+      </div>
+    </div>
+    <div class="relative flex justify-center w-[50%] hero-right -mt-16 ">
+      <!--  -->
+      <section class="flex items-center justify-center">
+        <div class="h-[540px] aspect-square rounded-full border-primary-600 border-2 p-[100px] bg-white flex items-center justify-center">
+          <div class="relative h-[530px] aspect-square rounded-full bg-[center_top_-10rem] bg-no-repeat bg-[url('./Assets/Graduate.jpg')]"></div>
+        </div>
+      </section>
+      <!--  -->
+      <section class="absolute flex justify-between -bottom-32 ">
+        <div class="h-[250px] aspect-square rounded-full border-primary-600 border-2 p-[2px] bg-white">
+          <img class="object-cover w-full h-full rounded-full" src="./Assets/student-studying-with-laptop.jpg" alt="">
+        </div>
+        <!--  -->
+        <div class="h-[250px] aspect-square rounded-full border-primary-600 border-2 p-[2px] bg-white">
+          <img class="object-cover w-full h-full rounded-full" src="./Assets/study-group-2-african-people.jpg" alt="">
+        </div>
+      </section>
+      <!--  -->
+    </div>
+  </main>
+  <!-- HERO SECTION END -->
 </body>
 </html>
