--- a/public/home.html
+++ b/public/home.html
@@ -21,8 +21,8 @@
   </header>
   <!-- HEADER END -->
   <!-- HERO SECTION -->
-  <main class="flex justify-between mt-[7em] px-12">
-    <div class="w-[50%] hero-left pt-5">
+  <main class="flex justify-between items-center pt-[3em] px-12 "> 
+    <div class="w-[50%] hero-left ">
       <h1 class="flex flex-col gap-3 text-6xl font-bold">
         <span class="text-primary-500">No more failure</span>
         <span class="text-primary-600">with U.C Hub</span>
@@ -37,26 +37,117 @@
         </button>
       </div>
     </div>
-    <div class="relative flex justify-center w-[50%] hero-right -mt-16 ">
+    <div class="relative flex justify-center w-[50%] hero-right">
       <!--  -->
       <section class="flex items-center justify-center">
-        <div class="h-[540px] aspect-square rounded-full border-primary-600 border-2 p-[100px] bg-white flex items-center justify-center">
+        <div class="h-[540px] heroImgContainer p-[100px] bg-white flex items-center justify-center">
           <div class="relative h-[530px] aspect-square rounded-full bg-[center_top_-10rem] bg-no-repeat bg-[url('./Assets/Graduate.jpg')]"></div>
         </div>
       </section>
       <!--  -->
       <section class="absolute flex justify-between -bottom-32 ">
-        <div class="h-[250px] aspect-square rounded-full border-primary-600 border-2 p-[2px] bg-white">
-          <img class="object-cover w-full h-full rounded-full" src="./Assets/student-studying-with-laptop.jpg" alt="">
+        <div class="h-[250px] heroImgContainer p-[2px] bg-white">
+          <img class="smallHeroImg" src="./Assets/student-studying-with-laptop.jpg" alt="">
         </div>
         <!--  -->
-        <div class="h-[250px] aspect-square rounded-full border-primary-600 border-2 p-[2px] bg-white">
-          <img class="object-cover w-full h-full rounded-full" src="./Assets/study-group-2-african-people.jpg" alt="">
+        <div class="h-[250px] heroImgContainer p-[2px] bg-white">
+          <img class="smallHeroImg" src="./Assets/study-group-2-african-people.jpg" alt="">
         </div>
       </section>
       <!--  -->
     </div>
   </main>
   <!-- HERO SECTION END -->
+  <!-- PEER TUTORING -->
+  <section class="relative h-[70vh] w-full mt-72">
+      <img class="absolute top-0 left-0 z-0 object-cover w-full h-full" src="./Assets/teamwork.jpg" alt="U.C HUB teamwork" loading="lazy"> 
+      <div class="absolute z-40 flex flex-col items-center justify-center w-full h-full px-12 bg-secondary-200Bg">
+        <div class="">
+          <h2 class="text-5xl font-semibold leading-[1.3em] w-[100%] text-white">Peer tutoring and coaching has several proven benefits for university students, both academically and personally.</h2>
+          <p class="mt-5 text-xl font-medium text-white">Join us as a student or coach.</p>
+          <div class="mt-10">
+            <button class="btn">
+              <a href="">Join the Waitlist</a>
+            </button>
+          </div>
+        </div>
+      </div> 
+  </section>
+  <!-- PEER TUTORING END -->
+  <!-- BRIDGE GAP -->
+  <section class="px-12 my-32 ">
+    <div>
+      <h3 class="text-4xl font-semibold leading-[1.3em] w-[90%] text-primary-300">We aim to bridge achievement gaps by connecting the right high achievers and average students</h3>
+    </div>
+    <div class="flex items-center justify-between mt-20">
+      <section class="flex flex-col items-center justify-center">
+        <img class="rounded-full" src="./Assets/academic coaching.svg" alt="">
+        <p class="mt-1 text-xl font-medium text-black-100">Provide Academic Tutoring</p>
+      </section>
+      <section class="flex flex-col items-center justify-center">
+        <img class="rounded-full" src="./Assets/achievement gaps.svg" alt="">
+        <p class="mt-1 text-xl font-medium text-black-100">Provide Career Mentoring</p>
+      </section>
+      <section class="flex flex-col items-center justify-center">
+        <img class="rounded-full" src="./Assets/career mentoring.svg" alt="">
+        <p class="mt-1 text-xl font-medium text-black-100">Bridge Achievement Gaps</p>
+      </section>
+    </div>
+    <div class="flex items-center justify-center mt-12 ">
+      <button class="btn">
+        <a href="">Join the Waitlist</a>
+      </button>
+    </div>
+  </section>
+  <!-- END BRIDGE GAP -->
+  <section class="px-12 my-32">
+    <header>
+      <p class="mb-4">WHY U.C HUB?</p>
+      <h3 class="text-4xl font-semibold leading-[1.3em] w-[90%] text-primary-300">Uni is very overwhelming, we all need help for a better experience</h3>
+    </header>
+    <!-- Sec1 -->
+    <section class="grid items-center grid-cols-2 mt-16">
+      <div class="col-span-1 text-wrap font-body2">
+        <section class="w-[90%] ml-auto flex flex-col gap-8">
+          <p class="font-medium text-black-100 w-[80%] leading-[1.5em] text-xl ">Become a better student with your personal accountability partner, who will help you with the challenges you face as a student, and track your progress as you go.</p>
+          <p class="font-medium text-primary-200 w-[80%] leading-[1.5em] text-xl ">Ineffective lectures, expensive and inconvenient tutorials, lack of reliable materials, distractions, work, and bad time management can no longer stop you!</p>
+        </section>
+      </div>
+      <div class="flex items-center justify-center col-span-1">
+        <img class="h-[450px] rounded-full aspect-square object-cover" src="./Assets/friends-people-group-teamwork-diversity.jpg" alt="U.C HUB teamwork-diversity" loading="lazy"> 
+      </div>
+    </section>
+    <!-- Sec1 End -->
+    <!-- Sec2 -->
+    <section class="grid items-center grid-cols-2 mt-16">
+      <div class="flex items-center justify-center col-span-1">
+        <img  class="h-[450px] rounded-full aspect-square object-cover" src="./Assets/girls-looking-notebook.jpg" alt="U.C HUB Scholars" loading="lazy" > 
+      </div>
+      <div class="col-span-1 text-wrap font-body2">
+        <section class="w-[90%] ml-auto flex flex-col gap-8 ">
+          <p class="font-medium text-black-100 w-[80%] leading-[1.5em] text-xl ">When your coach has similar experience with you, they can better guide you through your challenges and give you coping strategies.</p>
+          <p class="font-medium w-[80%] leading-[1.5em] text-xl ">
+            <span class=" text-primary-200">We’ll give you a list of like-minded coaches to choose from.</span> 
+            <span class="text-black-100">A list of colleagues that best suit your preferences. </span> <br>
+            <span class=" text-primary-200">Then you pick who you want to coach you.</span>
+          </p>
+        </section>
+      </div>
+    </section>
+    <!-- Sec2 End -->
+    <!-- Sec3 -->
+    <section class="grid items-center grid-cols-2 mt-16">
+      <div class="col-span-1 text-wrap font-body2">
+        <section class="w-[90%] ml-auto flex flex-col gap-8">
+          <p class="font-medium text-black-100 w-[80%] leading-[1.5em] text-xl ">Studying with friends is definitely more fun.</p>
+          <p class="font-medium text-primary-200 w-[80%] leading-[1.5em] text-xl ">U.C Hub has the option for getting group coaching with your friends.</p>
+        </section>
+      </div>
+      <div class="flex items-center justify-center col-span-1">
+        <img class="h-[450px] rounded-full aspect-square object-cover" src="./Assets/students-studying-together.jpg" alt="U.C HUB Students studying" loading="lazy"> 
+      </div>
+    </section>
+    <!-- Sec3 End -->
+  </section>
 </body>
 </html>
