Timi first commit

--- a/public/home.html
+++ b/public/home.html
@@ -148,6 +148,48 @@
       </div>
     </section>
     <!-- Sec3 End -->
+
+    <!-- Sec4 -->
+    <section class="grid items-center grid-cols-2 mt-20 bg-[#D9D9D9]`">
+      <div class="flex items-center justify-center col-span-1">
+        <img class="h-[450px] rounded-full aspect-square object-cover" src="./Assets/study-group-3-african-people.jpg" alt="U.C HUB Students studying" loading="lazy"> 
+      </div>
+      <div class="col-span-1 text-wrap font-body2">
+        <section class="w-[90%] ml-auto flex flex-col gap-8">
+          <p class="font-medium text-black-100 w-[80%] leading-[1.5em] text-xl ">Short Catchy Heading</p>
+          <p class="font-medium text-primary-200 w-[80%] leading-[1.5em] text-xl ">With Uc Hub’s Chatbot, Purple,
+            You can get FOR FREE all exam and lecture resources you may need for your courses</p>
+        </section>
+      </div>
+    </section>
+
+    <!-- Sec4 END -->
+
+    <!-- The slider section i think you need to handle -->
+    <!-- sec5 -->
+
+
+
+    <!-- sec5 End -->
+
+    <!-- Sec6 -->
+    <section class="grid items-center grid-cols-2 mb-30 style w-full mt-72">
+      <div class="col-span-1 text-wrap font-body2">
+        <section class="w-[90%] ml-auto flex flex-col gap-8">
+          <p class="font-bold text-black-200 w-[80%] leading-[1.5em] text-xl ">Ready to join the movement? </p>
+          <p class="font-medium text-black-200 w-[80%] leading-[1.5em] text-xl ">Join our waitlist, and be the first to know when UC Hub launches. Also get access to UC HUb updates and freebies like purple</p>
+        </section>
+      </div>
+      <div class="flex items-center justify-center col-span-1">
+        <div class="grid ">
+          <input type="text" placeholder="First Name" class="" >
+          <input type="text" placeholder="Last Name" class="">
+          <p>Your data is safe and we wont spam you with emails</p>
+          <button class="btn-1">Join The waitlist</button>
+        </div>
+
+      </div>
+    </section>
   </section>
 </body>
 </html>
