Timi second commit

--- a/public/home.html
+++ b/public/home.html
@@ -173,7 +173,7 @@
     <!-- sec5 End -->
 
     <!-- Sec6 -->
-    <section class="grid items-center grid-cols-2 mb-30 style w-full mt-72">
+    <section class="grid items-center grid-cols-2 mb-30 style w-full mt-72 style1">
       <div class="col-span-1 text-wrap font-body2">
         <section class="w-[90%] ml-auto flex flex-col gap-8">
           <p class="font-bold text-black-200 w-[80%] leading-[1.5em] text-xl ">Ready to join the movement? </p>
@@ -184,8 +184,10 @@
         <div class="grid ">
           <input type="text" placeholder="First Name" class="" >
           <input type="text" placeholder="Last Name" class="">
-          <p>Your data is safe and we wont spam you with emails</p>
-          <button class="btn-1">Join The waitlist</button>
+          <div class="grid-row items-center style2">
+            <p class="text-[15px]">Your data is safe and we wont spam you with emails</p>
+            <button class="btn-1">JOIN THE WAITLIST</button>
+          </div>
         </div>
 
       </div>
