--- a/public/home.html
+++ b/public/home.html
@@ -189,9 +189,32 @@
             <button class="btn-1">JOIN THE WAITLIST</button>
           </div>
         </div>
-
       </div>
     </section>
+
+    <!-- Sec6 End -->
+
+    <!-- sec7 -->
+
+    <section class="grid items-center grid-cols-2 mb-30 style w-full mt-72 style3">
+      <div class="flex items-center justify-center col-span-1">
+        <div class="grid ">
+          <input type="text" placeholder="First Name" class="" >
+          <input type="text" placeholder="Last Name" class="">
+          <div class="grid-row items-center style2">
+            <p class="text-[15px]">Your data is safe and we wont spam you with emails</p>
+            <button class="btn-1">JOIN THE WAITLIST</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-span-1 text-wrap font-body2">
+        <section class="w-[90%] ml-auto flex flex-col gap-8">
+          <p class="font-bold text-black-200 w-[80%] leading-[1.5em] text-xl ">Make money while nurturing potential, join us as a tutor </p>
+          <p class="font-medium text-black-200 w-[80%] leading-[1.5em] text-xl ">Join our waitlist, and be the first to know when UC Hub launches. Also get access to UC HUb updates and freebies like purple.</p>
+        </section>
+      </div>
+    </section>
+    <!-- Sec7 END -->
   </section>
 </body>
 </html>
