--- a/public/home.html
+++ b/public/home.html
@@ -172,7 +172,7 @@
 
     <!-- sec5 End -->
 
-    
+
     <!-- Sec6 -->
     <section class="grid items-center grid-cols-2 mb-30 style w-full mt-72 style1">
       <div class="col-span-1 text-wrap font-body2">
@@ -216,6 +216,16 @@
       </div>
     </section>
     <!-- Sec7 END -->
+
+    <!-- Sec8 -->
+    <footer >
+      <div class="foot">
+        <p class="text-sm font-bold text-white">Footer section message/content</p>
+        <p class="text-sm font-bold text-white">Copyright 2023.</p>
+      </div>
+    </footer>
+
+    <!-- Sec8 END -->
   </section>
 </body>
 </html>
